--- a/math/framework_calibrating_ecosystem_models.bib
+++ b/math/framework_calibrating_ecosystem_models.bib
@@ -116,6 +116,20 @@ year = {2020}
       primaryClass={stat.ML}
 }
 
+% Random Forward Models 
+@article{Lie_2018,
+   title={Random Forward Models and Log-Likelihoods in Bayesian Inverse Problems},
+   volume={6},
+   ISSN={2166-2525},
+   url={http://dx.doi.org/10.1137/18M1166523},
+   DOI={10.1137/18m1166523},
+   number={4},
+   journal={SIAM/ASA Journal on Uncertainty Quantification},
+   publisher={Society for Industrial & Applied Mathematics (SIAM)},
+   author={Lie, H. C. and Sullivan, T. J. and Teckentrup, A. L.},
+   year={2018},
+   month=jan, pages={1600–1629} }
+
 
 
 % ---------------------------------------------------------------------------------------------------
