--- a/math/framework_calibrating_ecosystem_models.bib
+++ b/math/framework_calibrating_ecosystem_models.bib
@@ -117,7 +117,7 @@ year = {2020}
 }
 
 % Random Forward Models 
-@article{Lie_2018,
+@article{random_fwd_models,
    title={Random Forward Models and Log-Likelihoods in Bayesian Inverse Problems},
    volume={6},
    ISSN={2166-2525},
@@ -170,7 +170,7 @@ keywords = {Dynamic simulators, Gaussian processes, Lorenz system, Uncertainty p
 abstract = {The dynamic emulation of non-linear deterministic computer codes where the output is a time series, possibly multivariate, is examined. Such computer models simulate the evolution of some real-world phenomenon over time, for example models of the climate or the functioning of the human brain. The models we are interested in are highly non-linear and exhibit tipping points, bifurcations and chaotic behaviour. However, each simulation run could be too time-consuming to perform analyses that require many runs, including quantifying the variation in model output with respect to changes in the inputs. Therefore, Gaussian process emulators are used to approximate the output of the code. To do this, the flow map of the system under study is emulated over a short time period. Then, it is used in an iterative way to predict the whole time series. A number of ways are proposed to take into account the uncertainty of inputs to the emulators, after fixed initial conditions, and the correlation between them through the time series. The methodology is illustrated with two examples: the highly non-linear dynamical systems described by the Lorenz and van der Pol equations. In both cases, the predictive performance is relatively high and the measure of uncertainty provided by the method reflects the extent of predictability in each system.}
 }
 
-@article{10.1093/biomet/asp028,
+@article{GP_dynamic_emulation,
     author = {Conti, S. and Gosling, J. P. and Oakley, J. E. and O'Hagan, A.},
     title = "{Gaussian process emulation of dynamic computer codes}",
     journal = {Biometrika},
@@ -186,7 +186,7 @@ abstract = {The dynamic emulation of non-linear deterministic computer codes whe
     eprint = {https://academic.oup.com/biomet/article-pdf/96/3/663/709193/asp028.pdf},
 }
 
-@article{CONTI2010640,
+@article{Bayesian_emulation_dynamic,
 title = {Bayesian emulation of complex multi-output and dynamic computer models},
 journal = {Journal of Statistical Planning and Inference},
 volume = {140},
@@ -201,7 +201,7 @@ keywords = {Bayesian inference, Computer experiments, Dynamic models, Hierarchic
 abstract = {Computer models are widely used in scientific research to study and predict the behaviour of complex systems. The run times of computer-intensive simulators are often such that it is impractical to make the thousands of model runs that are conventionally required for sensitivity analysis, uncertainty analysis or calibration. In response to this problem, highly efficient techniques have recently been developed based on a statistical meta-model (the emulator) that is built to approximate the computer model. The approach, however, is less straightforward for dynamic simulators, designed to represent time-evolving systems. Generalisations of the established methodology to allow for dynamic emulation are here proposed and contrasted. Advantages and difficulties are discussed and illustrated with an application to the Sheffield Dynamic Global Vegetation Model, developed within the UK Centre for Terrestrial Carbon Dynamics.}
 }
 
-@article{10.1214/009053607000000163,
+@article{emulate_functional_output,
 author = {M. J. Bayarri and D. Walsh and J. O. Berger and J. Cafeo and G. Garcia-Donato and F. Liu and J. Palomo and R. J. Parthasarathy and R. Paulo and J. Sacks},
 title = {{Computer model validation with functional output}},
 volume = {35},
@@ -215,7 +215,7 @@ doi = {10.1214/009053607000000163},
 URL = {https://doi.org/10.1214/009053607000000163}
 }
 
-@article{doi:10.1080/01621459.2014.934453,
+@article{emulate_dynamic_epidemic_model,
 author = {Marian Farah and Paul Birrell and Stefano Conti and Daniela De Angelis},
 title = {Bayesian Emulation and Calibration of a Dynamic Epidemic Model for A/H1N1 Influenza},
 journal = {Journal of the American Statistical Association},
@@ -265,7 +265,7 @@ URL = {https://acp.copernicus.org/articles/11/12253/2011/},
 DOI = {10.5194/acp-11-12253-2011}
 }
 
-@article{10.1214/09-BA415,
+@article{Liu_West_dynamic_emulation,
 author = {Fei Liu and Mike West},
 title = {{A dynamic modelling strategy for Bayesian computer model emulation}},
 volume = {4},
