Tested llikEmulatorExactGauss and llikEmulatorExactGaussDiag.

--- a/math/framework_calibrating_ecosystem_models.bib
+++ b/math/framework_calibrating_ecosystem_models.bib
@@ -136,6 +136,16 @@ year = {2020}
 % Emulating dynamic simulators / simulators with high-dimensional output
 % ---------------------------------------------------------------------------------------------------
 
+% Log likelihood emulation (as well as emulation of its gradient and Hessian) using neural operator. 
+@misc{cao2024efficient,
+      title={Efficient geometric Markov chain Monte Carlo for nonlinear Bayesian inversion enabled by derivative-informed neural operators}, 
+      author={Lianghao Cao and Thomas O'Leary-Roseberry and Omar Ghattas},
+      year={2024},
+      eprint={2403.08220},
+      archivePrefix={arXiv},
+      primaryClass={math.NA}
+}
+
 % Higdon et al PCA basis function approach to high-dim outputs. 
 @article{Higdon,
 author = {Dave Higdon and James Gattiker and Brian Williams and Maria Rightley},
