--- a/scripts/test/llikEmulator_tests.Rmd
+++ b/scripts/test/llikEmulator_tests.Rmd
@@ -203,6 +203,16 @@ llik_sum_emulator$plot_llik_samp_1d(test_info$inputs, lik_par_val=sig2_true, N_s
 
 # Validating llikEmulatorExactGauss and llikEmulatorExactGaussDiag
 ```{r}
+#
+# Testing class `llikEmulatorExactGauss`, which implements an exact Gaussian log likelihood 
+# with mean given by a (potentially nonlinear) forward function. This class requires 
+# specifying the forward model either as `fwd_model` (non-vectorized version) or 
+# `fwd_model_vectorized` (vectorized version), so we create objects using both approaches 
+# to ensure they give the same result.
+#
+# Also test class `llikEmulatorExactGaussDiag`, which is just like `llikEmulatorExactGauss`
+# but the covariance of the Gaussian likelihood is constrained to be diagonal. 
+#
 
 # Linear Gaussian Model Setup. 
 freqs <- c(0.1, 1, 1.4, 2, 0.5, 1.1)
@@ -225,11 +235,22 @@ computer_model_data <- linear_Gaussian_info$computer_model_data
 par_prior_params <- linear_Gaussian_info$theta_prior_params
 
 # Create llik objects. 
-colnames(G) <- computer_model_data$pars_cal_names
-llik_exact_diag_obj <- llikEmulatorExactLinGausDiag(llik_lbl="exact_diag", fwd_model=G, y_obs=computer_model_data$data_obs,
-                                                    sig2=sig2_eps, use_fixed_lik_par=TRUE)
-llik_exact_obj <- llikEmulatorExactLinGaus(llik_lbl="exact", fwd_model=G, y_obs=computer_model_data$data_obs,
-                                           Cov=diag(sig2_eps, nrow=N_obs), use_fixed_lik_par=TRUE)
+llik_exact_vect_obj <- llikEmulatorExactGauss(llik_lbl="exact_vect", fwd_model_vectorized=fwd_model_vectorized, 
+                                              y_obs=computer_model_data$data_obs, dim_par=ncol(G), 
+                                              Cov=diag(sig2_eps, nrow=N_obs), use_fixed_lik_par=TRUE, 
+                                              par_names=computer_model_data$pars_cal_names)
+llik_exact_novect_obj <- llikEmulatorExactGauss(llik_lbl="exact_novect", fwd_model=fwd_model, 
+                                                y_obs=computer_model_data$data_obs, dim_par=ncol(G), 
+                                                Cov=diag(sig2_eps, nrow=N_obs), use_fixed_lik_par=TRUE, 
+                                                par_names=computer_model_data$pars_cal_names)
+llik_exact_diag_vect_obj <- llikEmulatorExactGaussDiag(llik_lbl="exact_diag_vect", fwd_model=fwd_model, 
+                                                       y_obs=computer_model_data$data_obs, dim_par=ncol(G), 
+                                                       sig2=sig2_eps, use_fixed_lik_par=TRUE, 
+                                                       par_names=computer_model_data$pars_cal_names)
+llik_exact_diag_vect_obj <- llikEmulatorExactGaussDiag(llik_lbl="exact_diag_vect", fwd_model=fwd_model, 
+                                                       y_obs=computer_model_data$data_obs, dim_par=ncol(G), 
+                                                       sig2=sig2_eps, use_fixed_lik_par=TRUE, 
+                                                       par_names=computer_model_data$pars_cal_names)
 
 # Test evaluation inputs. 
 test_design <- get_input_output_design(N_points=1000,
@@ -238,19 +259,35 @@ test_design <- get_input_output_design(N_points=1000,
                                        computer_model_data=computer_model_data, 
                                        theta_prior_params=par_prior_params)
 
-# Validate Gaussian likelihood calculations. 
+# Validate Gaussian likelihood calculations. Recall that the `sample` method here 
+# is not actually sampling anything, just computing the exact llik (since these 
+# are exact). 
 llik_true <- llik_product_Gaussian(computer_model_data, sig2_eps, 
                                    theta_vals=test_design$inputs, normalize=TRUE, na.rm=TRUE)
-llik_test1 <- drop(llik_exact_diag_obj$sample(test_design$inputs, normalize=TRUE))
-llik_test2 <- drop(llik_exact_obj$sample(test_design$inputs, normalize=TRUE))
+llik_test_vect <- drop(llik_exact_vect_obj$sample(test_design$inputs, normalize=TRUE))
+llik_test_novect <- drop(llik_exact_novect_obj$sample(test_design$inputs, normalize=TRUE))
 
-print("llikEmulatorExactLinGausDiag llik calculation is correct:")
-print(all.equal(llik_true, llik_test1))
+print("llikEmulatorExactGaussDiag llik calculation using vectorized forward model is correct:")
+print(all.equal(llik_true, llik_test_vect))
 
-print("llikEmulatorExactLinGaus llik calculation is correct:")
-print(all.equal(llik_true, llik_test2))
+print("llikEmulatorExactGauss llik calculation using non-vectorized forward model is correct:")
+print(all.equal(llik_true, llik_test_novect))
 
 ```
+
+```{r}
+#
+# Testing class `llikEmulatorExactGaussDiag`, which is just like `llikEmulatorExactGauss`
+# but the covariance of the Gaussian likelihood is constrained to be diagonal. 
+#
+
+
+
+llik_test_diag <- drop(llik_exact_diag_obj$sample(test_design$inputs, normalize=TRUE))
+
+```
+
+
 
 ```{r}
 # Validating predict() methods for llikEmulatorMultGausGP and llikSumEmulator, and exponentiating 
